Update wallpaper happy easter.json

--- a/wallpaper happy easter.json
+++ b/wallpaper happy easter.json
@@ -17,11 +17,11 @@
 //     * Untuk Native akan terganti menjadi banner jika tanpa id 
 
 
-"PENGATURAN_IKLAN_BANNER" : "FAN",
-"PENGATURAN_IKLAN_INTER" : "FAN",
-"PENGATURAN_IKLAN_NATIVE" : "FAN",
+"PENGATURAN_IKLAN_BANNER" : "UNITY",
+"PENGATURAN_IKLAN_INTER" : "UNITY",
+"PENGATURAN_IKLAN_NATIVE" : "UNITY",
 
-"INTERS_COUNT_WEB" : 4,
+"INTERS_COUNT_WEB" : 3,
 
 "ENABLE_STRAP" : true,
 "ENABLE_STRAP_SPLAHSCREEN" : false,
@@ -40,7 +40,7 @@
 "UNITY_BANNER" : "banner",
 "UNITY_INTERSTITIAL" : "Interstitial",
 "UNITY_GAME_ID" : "4082115",
-"UNITY_TEST_MODE" : false,
+"UNITY_TEST_MODE" : true,
 
 "STARAPPID" : "201365479",
 
